--- a/index.html
+++ b/index.html
@@ -54,5 +54,19 @@
           </li>
         </ul>
       </section>
+
+      <div class="scroll-button">
+        <img src="images/Disabled.png" alt="scroll button" />
+      </div>
+  
+      <h1 class="recent-work-text">
+        My Recent<br />
+        Works
+      </h1>
+  
+      <div>
+        <img class="indicator" src="images/Indicator.png" alt="indicator"/>
+      </div>
+      
 </body>
 </html>
