--- a/index.html
+++ b/index.html
@@ -68,5 +68,180 @@
         <img class="indicator" src="images/Indicator.png" alt="indicator"/>
       </div>
       
+      <section class="card-container">
+        <div class="card">
+          <div class="card-image">
+  
+          </div>
+          <div class="text">
+            <h4 class="project-title">Multi-Post Stories<br>Gain+Glory</h4>
+              <div class="tag-container">
+                <div class="tag-ruby">
+                  <span class="tag-text">Ruby on rails</span>
+                </div>
+  
+                <div class="tag-css">
+                  <span class="tag-text">css</span>
+                </div>
+  
+                <div class="tag-javascript">
+                  <span class="tag-text">Javascript</html></span>
+                </div>
+  
+                <div class="tag-html">
+                  <span class="tag-text">HTML</html></span>
+                </div>
+              </div>
+  
+                <button class="button">See Project</button>
+  
+          </div>
+        </div>
+  
+        <div class="card">
+          <div class="card-image">
+  
+          </div>
+          <div class="text">
+            <h4 class="project-title">Multi-Post Stories<br>Gain+Glory</h4>
+              <div class="tag-container">
+                <div class="tag-ruby">
+                  <span class="tag-text">Ruby on rails</span>
+                </div>
+  
+                <div class="tag-css">
+                  <span class="tag-text">css</span>
+                </div>
+  
+                <div class="tag-javascript">
+                  <span class="tag-text">Javascript</html></span>
+                </div>
+  
+                <div class="tag-html">
+                  <span class="tag-text">HTML</html></span>
+                </div>
+              </div>
+  
+                <button class="button">See Project</button>
+  
+          </div>
+        </div>
+  
+        <div class="card">
+          <div class="card-image">
+  
+          </div>
+          <div class="text">
+            <h4 class="project-title">Multi-Post Stories<br>Gain+Glory</h4>
+              <div class="tag-container">
+                <div class="tag-ruby">
+                  <span class="tag-text">Ruby on rails</span>
+                </div>
+  
+                <div class="tag-css">
+                  <span class="tag-text">css</span>
+                </div>
+  
+                <div class="tag-javascript">
+                  <span class="tag-text">Javascript</html></span>
+                </div>
+  
+                <div class="tag-html">
+                  <span class="tag-text">HTML</html></span>
+                </div>
+              </div>
+  
+                <button class="button">See Project</button>
+  
+          </div>
+        </div>
+  
+        <div class="card">
+          <div class="card-image">
+  
+          </div>
+          <div class="text">
+            <h4 class="project-title">Multi-Post Stories<br>Gain+Glory</h4>
+              <div class="tag-container">
+                <div class="tag-ruby">
+                  <span class="tag-text">Ruby on rails</span>
+                </div>
+  
+                <div class="tag-css">
+                  <span class="tag-text">css</span>
+                </div>
+  
+                <div class="tag-javascript">
+                  <span class="tag-text">Javascript</html></span>
+                </div>
+  
+                <div class="tag-html">
+                  <span class="tag-text">HTML</html></span>
+                </div>
+              </div>
+  
+                <button class="button">See Project</button>
+  
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+  
+          </div>
+          <div class="text">
+            <h4 class="project-title">Multi-Post Stories<br>Gain+Glory</h4>
+              <div class="tag-container">
+                <div class="tag-ruby">
+                  <span class="tag-text">Ruby on rails</span>
+                </div>
+  
+                <div class="tag-css">
+                  <span class="tag-text">css</span>
+                </div>
+  
+                <div class="tag-javascript">
+                  <span class="tag-text">Javascript</html></span>
+                </div>
+  
+                <div class="tag-html">
+                  <span class="tag-text">HTML</html></span>
+                </div>
+              </div>
+  
+                <button class="button">See Project</button>
+  
+          </div>
+        </div>
+  
+        <div class="card">
+          <div class="card-image">
+  
+          </div>
+          <div class="text">
+            <h4 class="project-title">Multi-Post Stories<br>Gain+Glory</h4>
+              <div class="tag-container">
+                <div class="tag-ruby">
+                  <span class="tag-text">Ruby on rails</span>
+                </div>
+  
+                <div class="tag-css">
+                  <span class="tag-text">css</span>
+                </div>
+  
+                <div class="tag-javascript">
+                  <span class="tag-text">Javascript</html></span>
+                </div>
+  
+                <div class="tag-html">
+                  <span class="tag-text">HTML</html></span>
+                </div>
+              </div>
+  
+                <button class="button">See Project</button>
+  
+          </div>
+        </div>
+      </section>
 </body>
 </html>
