Add about me section (background images, heading text & paragraph text

--- a/index.html
+++ b/index.html
@@ -243,5 +243,13 @@
           </div>
         </div>
       </section>
+
+      <section class="aboutMe">
+        <div class="h1-background"><h1>About Me</h1></div>
+        
+        <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,
+            don’t hestiate to contact me.</p>
+          <button class="button">Get My Resume</button>
+      </section>
 </body>
 </html>
