Add Languages, Frameworks & skills cards

--- a/index.html
+++ b/index.html
@@ -251,5 +251,59 @@
             don’t hestiate to contact me.</p>
           <button class="button">Get My Resume</button>
       </section>
+
+      <section class="card-container">
+        <article class="languages-card">
+          <div class="ellipse">
+            <img src="images/icon-languages.svg" class="ellipse-image"/>
+          </div>
+          <h4 class="language-text">Languages</h4>
+          <ul class="language-tag-container">
+            <li class="lang-jsListitem">Javascript</li>
+            <li class="lang-rubyListitem">Ruby</li>
+            <li class="lang-htmlListitem">Html</li>
+            <li class="lang-cssListitem">css</li>
+          </ul>
+        </article>
+  
+        <article class="languages-card">
+          <div class="ellipse">
+            <img src="images/icon-frameworks.svg" class="ellipse-image"/>
+          </div>
+          <h4 class="language-text">Frameworks</h4>
+          <div class="tag-container-rows">
+            <ul class="frameworks-tag-container">
+              <li class="bootstrap">Bootstrap</li>
+              <li class="rubyOnRails">Ruby on rails</li>
+              <li class="rspec">RSpec</li>
+            </ul>
+            <ul class="frameworks-tag-container">
+              <li class="capybara">Capybara</li>
+              <li class="selenium">Selenium</li>
+            </ul>
+          </div>
+  
+        </article>
+  
+        <article class="languages-card">
+          <div class="ellipse">
+            <img src="images/icon-skills.svg" class="ellipse-image"/>
+          </div>
+          <h4 class="language-text">Skills</h4>
+          <div class="tag-container-rows">
+            <ul class="skills-tag-container">
+              <li class="codekit">Codekit</li>
+              <li class="github">GitHub</li>
+              <li class="codepen">Codepen</li>
+              <li class="gitlab">Gitlab</li>
+            </ul>
+            <ul class="skills-tag-container">
+              
+              <li class="terminal">Terminal</li>
+            </ul>
+          </div>
+  
+        </article>
+      </section>
 </body>
 </html>
