--- a/index.html
+++ b/index.html
@@ -305,5 +305,67 @@
   
         </article>
       </section>
+
+      <section class="section-contact-form">
+        <div class="div-heading-form">
+         <h2 class="heading-form">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+        </div>
+  
+        <div>
+          <form class="contact-form" >
+  
+            <div>
+              <fieldset>
+                <input type="text" placeholder="Fullname" />
+              </fieldset>
+            </div>
+  
+            <div>
+              <fieldset>
+                <input type="email" placeholder="Email address" />
+              </fieldset>
+            </div>
+  
+            <div>
+              <fieldset>
+                <textarea name="comment" placeholder="Enter text here" ></textarea>
+              </fieldset>
+            </div>
+  
+            <div>
+              <button class="btn-form btn_effects" type="submit">Get in touch</button>
+            </div>
+          </form>
+        </div>
+  
+        <div class="contact-form-icons">
+          <ul class="socilaLinks">
+            <li>
+              <a href="#" target="_blank"><img src="images/twitter.png" /></a>
+            </li>
+            <li>
+              <a href="#" target="_blank"
+                ><img src="images/Linkedin icon.png"
+              /></a>
+            </li>
+            <li>
+              <a href="#" target="_blank"><img src="images/medium.png" /></a>
+            </li>
+            <li>
+              <a href="#" target="_blank"><img src="images/github.png" /></a>
+            </li>
+            <li>
+              <a href="#" target="_blank"><img src="images/angellist.png" /></a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <div class="email-footer">
+        <h3 class="heading-footer">mandeyacedrich@gmail.com</h3>
+      </div>
+  
+      <div class="divider"><hr class="rounded"></div>
+  
 </body>
 </html>
