--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                       <span class="tag-text">HTML</html></span>
                     </li>
                   </ul>
-                <button class="button">See Project</button>
+                <button type="button" class="button">See Project</button>
             </div>
         </div>
   
@@ -119,7 +119,7 @@
                       <span class="tag-text">HTML</html></span>
                     </li>
                   </ul>
-                <button class="button">See Project</button>
+                <button type="button" class="button">See Project</button>
             </div>
         </div>
   
@@ -146,7 +146,7 @@
                       <span class="tag-text">HTML</html></span>
                     </li>
                   </ul>
-                <button class="button">See Project</button>
+                <button type="button" class="button">See Project</button>
             </div>
         </div>
   
@@ -173,7 +173,7 @@
                       <span class="tag-text">HTML</html></span>
                     </li>
                   </ul>
-                <button class="button">See Project</button>
+                <button type="button" class="button">See Project</button>
             </div>
         </div>
 
@@ -200,7 +200,7 @@
                       <span class="tag-text">HTML</html></span>
                     </li>
                   </ul>
-                <button class="button">See Project</button>
+                <button type="button" class="button">See Project</button>
             </div>
         </div>
   
@@ -227,7 +227,7 @@
                       <span class="tag-text">HTML</html></span>
                     </li>
                   </ul>
-                <button class="button">See Project</button>
+                <button type="button" class="button">See Project</button>
             </div>
         </div>
       </section>
@@ -237,7 +237,7 @@
         
         <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,
             don’t hestiate to contact me.</p>
-          <button class="button">Get My Resume</button>
+          <button type="button" class="button">Get My Resume</button>
       </section>
 
       <section class="card-container">
@@ -293,5 +293,53 @@
   
         </article>
       </section>  
+
+      <section class="section-contact-form">
+        <div class="div-heading-form">
+            <h2 class="heading-form">I'm always interested in hearing about new projects, so if you'd like to chat please
+                get in touch.</h2>
+        </div>
+        <div>
+            <form class="contact-form" action="https://formspree.io/f/moqbgore" method="post">
+                <div>
+                    <fieldset>
+                        <input type="text" placeholder="Fullname" maxlength="30" required />
+                    </fieldset>
+                </div>
+                <div>
+                    <fieldset>
+                        <input type="email" placeholder="Email address" required />
+                    </fieldset>
+                </div>
+                <div>
+                    <fieldset>
+                        <textarea name="comment" placeholder="Enter text here" maxlength="500" required></textarea>
+                    </fieldset>
+                </div>
+                <div>
+                    <button class="button" type="submit">Get in touch</button>
+                </div>
+            </form>
+        </div>
+        <div class="contact-form-icons">
+            <ul class="socilaLinks">
+                <li>
+                    <a href="#" target="_blank"><img src="images/twitter.png" /></a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"><img src="images/Linkedin icon.png" /></a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"><img src="images/medium.png" /></a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"><img src="images/github.png" /></a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"><img src="images/angellist.png" /></a>
+                </li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
