--- a/index.html
+++ b/index.html
@@ -366,10 +366,11 @@
   </div>
 
 </section>
-<div class="email-footer">
-  <h3 class="heading-footer">mandeyacedrich@gmail.com</h3>
-</div><div class="divider">
-  <hr class="rounded">
+<div class="email-footer">
+  <h3 class="heading-footer">mandeyacedrich@gmail.com</h3>
+</div>
+<div class="divider">
+  <hr class="rounded">
 </div>
 </body>
 
