--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 
 <body>
 
-  <header class="header">
-
-    <a class="header-text navItem" href="#">
-      <h2>Welcome</h2>
-    </a>
-
-    <nav class="navItem">
-      <a href="#"><i class="fa fa-bars"></i></a>
-    </nav>
-  </header>
-
   <section class="content-container">
+    <header class="header">
+        <a class="header-text navItem" href="#">
+            <h2>Welcome</h2>
+        </a>
+        <nav class="navItem">
+            <a href="#">Portfolio</i></a>
+            <a href="#">About</i></a>
+            <a href="#">Contact</i></a>
+        </nav>
+        <a class="menu-bars" href="#"><i class="fa fa-bars"></i></a>
+    </header>
+
+  <!-- <section class="content-container"> -->
     <h1>
       Hey there, I'm Cedrich<br /><span class="profession">I'm a software developer.</span>
     </h1>
@@ -60,7 +62,7 @@
     My Recent<br />
     Works
   </h1>
-
+  <h1 class="recent-work-text-desktop">My Recent Works</h1>
   <div>
     <img class="indicator" src="images/Indicator.png" alt="indicator" />
   </div>
@@ -82,15 +84,13 @@
           </li>
 
           <li class="tag-javascript">
-            <span class="tag-text">Javascript
-
-</html></span>
+            <span class="tag-text">Javascript</span>
 </li>
 
 <li class="tag-html">
   <span class="tag-text">HTML
 
-    </html></span>
+    </span>
 </li>
 </ul>
 <button type="button" class="button">See Project</button>
@@ -206,15 +206,11 @@
       </li>
 
       <li class="tag-javascript">
-        <span class="tag-text">Javascript
-
-          </html></span>
+        <span class="tag-text">Javascript</span>
       </li>
 
       <li class="tag-html">
-        <span class="tag-text">HTML
-
-          </html></span>
+        <span class="tag-text">HTML</span>
       </li>
     </ul>
     <button type="button" class="button">See Project</button>
@@ -237,15 +233,11 @@
       </li>
 
       <li class="tag-javascript">
-        <span class="tag-text">Javascript
-
-          </html></span>
+        <span class="tag-text">Javascript</span>
       </li>
 
       <li class="tag-html">
-        <span class="tag-text">HTML
-
-          </html></span>
+        <span class="tag-text">HTML</span>
       </li>
     </ul>
     <button type="button" class="button">See Project</button>
@@ -263,7 +255,16 @@
     don’t hestiate to contact me.</p>
   <button type="button" class="button">Get My Resume</button>
 </section>
-
+<section class="about-me-desktop">
+  <div class="h1-background">
+      <h1 class="h1-about-me-desktop">About Me</h1>
+  </div>
+  <div class="para-wrap">
+  <p> I can help you build a product , feature or website Look through some of my work and experience! If you like
+      what you see and have a project you need coded, don’t hestiate to contact me.</p>
+  </div>   
+  <button class="button">Get My Resume</button>
+</section>
 <section class="card-container">
   <article class="languages-card">
     <div class="ellipse">
