--- a/index.html
+++ b/index.html
@@ -318,6 +318,55 @@
   </article>
 </section>
 
+<section class="section-contact-form">
+  <div class="div-heading-form">
+    <h2 class="heading-form">I'm always interested in hearing about new projects, so if you'd like to chat please
+      get in touch.</h2>
+  </div>
+  <div>
+    <form class="contact-form">
+      <div>
+        <fieldset>
+          <input type="text" placeholder="Fullname" />
+        </fieldset>
+      </div>
+      <div>
+        <fieldset>
+          <input type="email" placeholder="Email address"  />
+        </fieldset>
+      </div>
+      <div>
+        <fieldset>
+          <textarea name="comment" placeholder="Enter text here" ></textarea>
+        </fieldset>
+      </div>
+      <div>
+        <button class="button" type="submit">Get in touch</button>
+      </div>
+    </form>
+  </div>
+  <div class="contact-form-icons">
+    <ul class="socilaLinks">
+      <li>
+        <a href="#" target="_blank"><img src="images/twitter.png" /></a>
+      </li>
+      <li>
+        <a href="#" target="_blank"><img src="images/Linkedin icon.png" /></a>
+      </li>
+      <li>
+        <a href="#" target="_blank"><img src="images/medium.png" /></a>
+      </li>
+      <li>
+        <a href="#" target="_blank"><img src="images/github.png" /></a>
+      </li>
+      <li>
+        <a href="#" target="_blank"><img src="images/angellist.png" /></a>
+      </li>
+    </ul>
+  </div>
+
+</section>
+
 </body>
 
 </html>
