--- a/index.html
+++ b/index.html
@@ -327,17 +327,17 @@
     <form class="contact-form">
       <div>
         <fieldset>
-          <input type="text" placeholder="Fullname" />
+          <input type="text" placeholder="Fullname" required/>
         </fieldset>
       </div>
       <div>
         <fieldset>
-          <input type="email" placeholder="Email address"  />
+          <input type="email" placeholder="Email address" required/>
         </fieldset>
       </div>
       <div>
         <fieldset>
-          <textarea name="comment" placeholder="Enter text here" ></textarea>
+          <textarea name="comment" placeholder="Enter text here" required></textarea>
         </fieldset>
       </div>
       <div>
