Add action for form

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       get in touch.</h2>
   </div>
   <div>
-    <form class="contact-form">
+    <form class="contact-form"  action="https://formspree.io/f/moqbgore" method="post">
       <div>
         <fieldset>
           <input type="text" placeholder="Fullname" required/>
