Add validation requirement for comment and footer

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     <form class="contact-form"  action="https://formspree.io/f/moqbgore" method="post">
       <div>
         <fieldset>
-          <input type="text" placeholder="Fullname" required/>
+          <input type="text" placeholder="Fullname" maxlength="30" required/>
         </fieldset>
       </div>
       <div>
@@ -337,7 +337,7 @@
       </div>
       <div>
         <fieldset>
-          <textarea name="comment" placeholder="Enter text here" required></textarea>
+          <textarea name="comment" placeholder="Enter text here" maxlength="500" required></textarea>
         </fieldset>
       </div>
       <div>
@@ -366,7 +366,9 @@
   </div>
 
 </section>
-
+<div class="email-footer">
+  <h3 class="heading-footer">mandeyacedrich@gmail.com</h3>
+</div>
 </body>
 
 </html>
