--- a/index.html
+++ b/index.html
@@ -369,6 +369,11 @@
 <div class="email-footer">
   <h3 class="heading-footer">mandeyacedrich@gmail.com</h3>
 </div>
+
+<div class="divider">
+  <hr class="rounded" />
+</div>
+
 </body>
 
 </html>
