add one input field

--- a/index.html
+++ b/index.html
@@ -350,7 +350,10 @@
       <form class="contact-form" action="https://formspree.io/f/moqbgore" method="post">
         <div>
           <fieldset>
-            <input type="text" placeholder="Fullname" maxlength="30" required />
+            <input type="text" placeholder="Firstname" maxlength="30" required />
+          </fieldset>
+          <fieldset>
+            <input type="text" placeholder="Lastname" maxlength="30" required />
           </fieldset>
         </div>
         <div>
